--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <title> INNO-ATHON</title>
-   <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" /><link rel="stylesheet" href="./style.css">
-   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" /><link rel="stylesheet" href="./style.css">
+   <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" /><link rel="stylesheet" href="innov-a-thon\css\style.css">
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" /><link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 <body>
     <video autoplay loop muted plays-inline class="background-video">
       <source
-        src="C:\Users\Asus\OneDrive\Desktop\innov-a-thon\CHayan.mp4"
+        src="https://www.youtube.com/watch?v=WYeFqSjvGaY&pp=ygUVZWFydGggcm90YXRpbmcgdmlkZW8g"
         type="video/mp4" />
     </video>
 
@@ -30,7 +30,7 @@
           
   
           <li>
-            <a href="C:\Users\Asus\OneDrive\Desktop\innov-a-thon\hhj\login.html">
+            <a href="innov-a-thon\login_page\login.html">
               <i class="fa fa-pen nav-icon"></i>
               <span class="nav-text">Login</span>
             </a>
@@ -69,7 +69,7 @@
 
     <section class="content">
       <img
-          src="logo-transparent.png"
+          src="innov-a-thon\pictures\logo-transparent.png"
           alt="logo"
           class="logo1"
           style="width: 500px;"
