--- a/innov-a-thon/login_page/login.html
+++ b/innov-a-thon/login_page/login.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title> Glassmorphism login Form | Nothing4us </title>
+  <title>  login Form  </title>
   
 </head>
 <body>
